openshift/90-frontend/route-frontend.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: frontend-app
    app.kubernetes.io/part-of: gbaia
  name: gbaia-frontend
spec:
  port:
    targetPort: 7860
  tls:
    caCertificate: '-----BEGIN CERTIFICATE-----

      MIIEVzCCAj+gAwIBAgIRAKp18eYrjwoiCWbTi7/UuqEwDQYJKoZIhvcNAQELBQAw

      TzELMAkGA1UEBhMCVVMxKTAnBgNVBAoTIEludGVybmV0IFNlY3VyaXR5IFJlc2Vh

      cmNoIEdyb3VwMRUwEwYDVQQDEwxJU1JHIFJvb3QgWDEwHhcNMjQwMzEzMDAwMDAw

      WhcNMjcwMzEyMjM1OTU5WjAyMQswCQYDVQQGEwJVUzEWMBQGA1UEChMNTGV0J3Mg

      RW5jcnlwdDELMAkGA1UEAxMCRTcwdjAQBgcqhkjOPQIBBgUrgQQAIgNiAARB6AST

      CFh/vjcwDMCgQer+VtqEkz7JANurZxLP+U9TCeioL6sp5Z8VRvRbYk4P1INBmbef

      QHJFHCxcSjKmwtvGBWpl/9ra8HW0QDsUaJW2qOJqceJ0ZVFT3hbUHifBM/2jgfgw

      gfUwDgYDVR0PAQH/BAQDAgGGMB0GA1UdJQQWMBQGCCsGAQUFBwMCBggrBgEFBQcD

      ATASBgNVHRMBAf8ECDAGAQH/AgEAMB0GA1UdDgQWBBSuSJ7chx1EoG/aouVgdAR4

      wpwAgDAfBgNVHSMEGDAWgBR5tFnme7bl5AFzgAiIyBpY9umbbjAyBggrBgEFBQcB

      AQQmMCQwIgYIKwYBBQUHMAKGFmh0dHA6Ly94MS5pLmxlbmNyLm9yZy8wEwYDVR0g

      BAwwCjAIBgZngQwBAgEwJwYDVR0fBCAwHjAcoBqgGIYWaHR0cDovL3gxLmMubGVu

      Y3Iub3JnLzANBgkqhkiG9w0BAQsFAAOCAgEAjx66fDdLk5ywFn3CzA1w1qfylHUD

      aEf0QZpXcJseddJGSfbUUOvbNR9N/QQ16K1lXl4VFyhmGXDT5Kdfcr0RvIIVrNxF

      h4lqHtRRCP6RBRstqbZ2zURgqakn/Xip0iaQL0IdfHBZr396FgknniRYFckKORPG

      yM3QKnd66gtMst8I5nkRQlAg/Jb+Gc3egIvuGKWboE1G89NTsN9LTDD3PLj0dUMr

      OIuqVjLB8pEC6yk9enrlrqjXQgkLEYhXzq7dLafv5Vkig6Gl0nuuqjqfp0Q1bi1o

      yVNAlXe6aUXw92CcghC9bNsKEO1+M52YY5+ofIXlS/SEQbvVYYBLZ5yeiglV6t3S

      M6H+vTG0aP9YHzLn/KVOHzGQfXDP7qM5tkf+7diZe7o2fw6O7IvN6fsQXEQQj8TJ

      UXJxv2/uJhcuy/tSDgXwHM8Uk34WNbRT7zGTGkQRX0gsbjAea/jYAoWv0ZvQRwpq

      Pe79D/i7Cep8qWnA+7AE/3B3S/3dEEYmc0lpe1366A/6GEgk3ktr9PEoQrLChs6I

      tu3wnNLB2euC8IKGLQFpGtOO/2/hiAKjyajaBP25w1jF0Wl8Bbqne3uZ2q1GyPFJ

      YRmT7/OXpmOH/FVLtwS+8ng1cAmpCujPwteJZNcDG0sF2n/sc0+SQf49fdyUK0ty

      +VUwFj9tmWxyR/M=

      -----END CERTIFICATE-----

      '
    certificate: '-----BEGIN CERTIFICATE-----

      MIIDrDCCAzKgAwIBAgISBhlEPuTU9y6n0G0rBdhbJKxSMAoGCCqGSM49BAMDMDIx

      CzAJBgNVBAYTAlVTMRYwFAYDVQQKEw1MZXQncyBFbmNyeXB0MQswCQYDVQQDEwJF

      NzAeFw0yNjA1MTIxNDA2MjFaFw0yNjA4MTAxNDA2MjBaMCAxHjAcBgNVBAMTFWFp

      LXBvZC5lbWVhci1zcGluLmNvbTBZMBMGByqGSM49AgEGCCqGSM49AwEHA0IABKS5

      QudTwwCnPpTnx6emBRE0FmA2kTFKclGjYtKM5PLp91seuM6V9Y93UAuw+W+PHTEC

      BpgbW9Ou2iNKzt/Q/pSjggI4MIICNDAOBgNVHQ8BAf8EBAMCB4AwEwYDVR0lBAww

      CgYIKwYBBQUHAwEwDAYDVR0TAQH/BAIwADAdBgNVHQ4EFgQUzjuMog/vEeiH1D2A

      rr13cF2lFnwwHwYDVR0jBBgwFoAUrkie3IcdRKBv2qLlYHQEeMKcAIAwMgYIKwYB

      BQUHAQEEJjAkMCIGCCsGAQUFBzAChhZodHRwOi8vZTcuaS5sZW5jci5vcmcvMDkG

      A1UdEQQyMDCCFyouYWktcG9kLmVtZWFyLXNwaW4uY29tghVhaS1wb2QuZW1lYXIt

      c3Bpbi5jb20wEwYDVR0gBAwwCjAIBgZngQwBAgEwLQYDVR0fBCYwJDAioCCgHoYc

      aHR0cDovL2U3LmMubGVuY3Iub3JnLzgzLmNybDCCAQoGCisGAQQB1nkCBAIEgfsE

      gfgA9gB1AMs49xWJfIShRF9bwd37yW7ymlnNRwppBYWwyxTDFFjnAAABnhy4KH4A

      AAQDAEYwRAIgBz2zNizSNbwm+qCgycUtdDB0eNS5DRJAx08lyt+cZzgCIAjzMIxZ

      mz5ce3bahIgZKgMSlVYuAmrLX7VGc3lZmDp8AH0AqCbL4wrGNRJGUz/gZfFPGdlu

      GQgTxB3ZbXkAsxI8VScAAAGeHLgsEgAIAAAFAAqZItcEAwBGMEQCID0lmd7RI2rc

      pHAHsc1uTNjGeyR+Jx18o8rbeZyRSjMWAiAk+mr9tf82wx171K1gRKOrIJCC5E4x

      bbkNx86Kc+SuvzAKBggqhkjOPQQDAwNoADBlAjB7HosHgWN7D2LAu8Wu7zXT+zuB

      du/hVkQIdGwo9nzdB/f0lTEXVrG04IZQK6tGR6ICMQCpwcFs1j/O4RQnGvMkAtzq

      OnoYuJZVKxF3gH5JZZG++gf1p+fkyRbf6FUEjH7oTAw=

      -----END CERTIFICATE-----

      '
    insecureEdgeTerminationPolicy: Redirect
    key: '-----BEGIN PRIVATE KEY-----

      MIGHAgEAMBMGByqGSM49AgEGCCqGSM49AwEHBG0wawIBAQQgSt6kstxflmRWHCvD

      pG465i9MKBLHRM8qGd4nEzPb0XChRANCAASkuULnU8MApz6U58enpgURNBZgNpEx

      SnJRo2LSjOTy6fdbHrjOlfWPd1ALsPlvjx0xAgaYG1vTrtojSs7f0P6U

      -----END PRIVATE KEY-----

      '
    termination: edge
  to:
    kind: Service
    name: gbaia-frontend
    weight: 100
